04_Teste/exercicios_gerados/question_mdp_28_dollar_variavel/version_1/full_program_output.txt
Traceback (most recent call last):
  File "<string>", line 8
    $amount       = 5
    ^
SyntaxError: invalid syntax